force-app/main/default/objects/Scheduled_Appointment__c/Scheduled_Appointment__c.object-meta.xml
<CustomObject>
    <description>This object represents the scheduled appointments, its a junction object between Doctor and Patient</description>
    <label>Scheduled Appointment</label>
    <nameField>
        <label>Scheduled Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>