force-app/main/default/objects/Scheduled_Appointment__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <description>Represents the date of the appointment</description>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>