force-app/main/default/objects/Scheduled_Appointment__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Doctor__c object</description>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Scheduled Appointments</relationshipLabel>
    <relationshipName>Scheduled_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>