force-app/main/default/objects/Scheduled_Appointment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <description>Relationship to the Patient__c object</description>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Scheduled Appointments</relationshipLabel>
    <relationshipName>Scheduled_Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>